metabase-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
      - name: metabase
        image: metabase/metabase:v0.62.13
        resources:
          requests:
            memory: "4096Mi"
            cpu: "2000m"
          limits:
            memory: "8192Mi"
            cpu: "4000m"
        ports:
        - containerPort: 3000
        #Variables de entorno desde el config map
