metabase-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase-service
spec:
  selector:
    app: metabase
  ports:
  - protocol: TCP
    port: 3000
    targetPort:  3000
