fe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase-ingress
  namespace: fequirogaa-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
  - host: fequirogaa-metabase.my.kube.um.edu.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metabase-service
            port:
              number: 3000
